--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/output.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description"
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
@@ -124,9 +123,9 @@
             </a>
 
         </div>
-        <div data-aos="fade-up" data-aos-duration="1000" class="w-2/4 px-2 border-b-4 border-black md:mx-4">
+        <div class="w-2/4 px-2 border-b-4 border-black md:mx-4">
 
-            <img class="mx-auto h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
+            <img class="animate-fade-up animate-infinite animate-duration-[5000ms] animate-delay-100 mx-auto h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
                 src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/angry-man-svgrepo-com(1).svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2FuZ3J5LW1hbi1zdmdyZXBvLWNvbSgxKS5zdmciLCJpYXQiOjE3MTE3Mzg1MzAsImV4cCI6MTc0MzI3NDUzMH0.gxYOR7xxmfiJ0vFLKtt87lAgXwvJasGDC7e0DRXLMzY&t=2024-03-29T18%3A55%3A30.905Z"
                 alt="image description">
 
@@ -411,7 +410,6 @@
 
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
-    <script src="node_modules/aos/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
