--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../src/css/output.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="../src/css/aos.css" />
     <meta name="description"
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
@@ -63,31 +63,21 @@
     <!-- HERO -->
 
 
-    <section
-        class="h-screen bg-center bg-no-repeat bg-gray-700 bg-blend-multiply" style="background-image: url('https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/pexels-lukas-574071.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BleGVscy1sdWthcy01NzQwNzEuanBnIiwiaWF0IjoxNzExNjMxOTMyLCJleHAiOjE3NDMxNjc5MzJ9.kwj6HrQjXntT9PlYZMu3q_NFH5Jkd5u_IDf7XJTEN8Q&t=2024-03-28T13%3A18%3A52.190Z')">
+    <section class="h-screen bg-center bg-no-repeat bg-gray-700 bg-blend-multiply"
+        style="background-image: url('https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/pexels-lukas-574071.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BleGVscy1sdWthcy01NzQwNzEuanBnIiwiaWF0IjoxNzExNjMxOTMyLCJleHAiOjE3NDMxNjc5MzJ9.kwj6HrQjXntT9PlYZMu3q_NFH5Jkd5u_IDf7XJTEN8Q&t=2024-03-28T13%3A18%3A52.190Z')">
         <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
                 ¿Diferenciarse? con nuestro servicio es posible</h1>
             <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-52">el mundo Digital es nuestro
                 espacio, nos centramos en ofrecerte crecimiento, visibilidad y conocer realmente quien sos en linea.
             </p>
-            <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-                <a href="https://w.app/tflRnm"
-                    class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-violet-400 hover:bg-violet-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-                    ¡Comenza!
-                    <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                        fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M1 5h12m0 0L9 1m4 4L9 9" />
-                    </svg>
-                </a>
-            </div>
         </div>
     </section>
 
     <!-- Introducción -->
     <section class="flex flex-col md:flex-row md:gap-10 md:justify-between h-full mt-10 mb-10  mx-auto">
-        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400"
+            class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Desarrollo web</h2>
             <p class="my-4 text-lg text-gray-500">Si no tenes página, ¿con que pensas que se encuentra tu cliente? Tal
@@ -98,14 +88,6 @@
                     solida en línea</span>
 
             </p>
-            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
-                Contactanos
-                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                    fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M1 5h12m0 0L9 1m4 4L9 9" />
-                </svg>
-            </a>
 
         </div>
         <div data-aos="fade-down" data-aos-delay="200" class="w-52 px-2  md:mx-4 mx-auto">
@@ -126,7 +108,8 @@
                 alt="image description">
 
         </div>
-        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400"
+            class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Embudo de ventas</h2>
             <p class="my-4 text-lg text-gray-500">Hoy en dia hay que pensar en el proceso por el que pasan tus clientes,
@@ -137,21 +120,15 @@
                     por los procesos y dudas por las que pasa tu lead</span>
 
             </p>
-            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
-                Contactanos
-                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                    fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M1 5h12m0 0L9 1m4 4L9 9" />
-                </svg>
-            </a>
+
 
         </div>
         </div>
     </section>
     <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
     <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
-        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400"
+            class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Campañas de anuncios</h2>
             <p class="my-4 text-lg text-gray-500">¡Hace que tu negocio destaque en línea! Aumenta tu visibilidad y atrae
@@ -159,14 +136,7 @@
                 conocimiento en las plataformas de META. ¡Tene resultados tangibles y ROI garantizado!
 
             </p>
-            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
-                Contactanos
-                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                    fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M1 5h12m0 0L9 1m4 4L9 9" />
-                </svg>
-            </a>
+
 
         </div>
         <div data-aos="fade-down" data-aos-delay="200" class="w-52 px-2  md:mx-4 mx-auto">
@@ -187,7 +157,8 @@
                 alt="image description">
 
         </div>
-        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400"
+            class="grow w-screen self-center px-3 md:px-6 order-1 md:order-2 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Nutrición</h2>
             <p class="my-4 text-lg text-gray-500">Tenemos las mejoras estrategias de nutrición, estrategias que tienen
@@ -195,33 +166,23 @@
                 ayuda obtendras las claves para que tu contenido y lo que le des de "comer" a tus clientes sea
                 rrealmente bueno y de calidad
             </p>
-            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
-                Contactanos
-                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                    fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M1 5h12m0 0L9 1m4 4L9 9" />
-                </svg>
-            </a>
 
         </div>
         </div>
     </section>
     <div class="border-t-4 border-violet-400 my-10 md:flex"></div>
     <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-10  mx-auto">
-        <div data-aos="fade-down-right" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
+        <div data-aos="fade-down-right" data-aos-delay="400"
+            class="grow w-screen self-center px-3 md:px-6 mb-10 md:mb-0">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Analisis</h2>
-            <p class="my-4 text-lg text-gray-500">Con nuestro servicio no es solo una propuesta de estrategias que funcionan, sino que nos importa algo que mucha gente tiene miedo a decir, en cualquier servicio hay errores, ¿te imaginas como es en el mundo digital? Si te estan vendiendo servicios sin errores es mentira, los errores estan y para eso nos especializamos en ofrecer un servicio 100% transparente en el que se trabaja a partir de analitica de datos, el problema no son los errores, sino que como se acciona ante ellos.
+            <p class="my-4 text-lg text-gray-500">Con nuestro servicio no es solo una propuesta de estrategias que
+                funcionan, sino que nos importa algo que mucha gente tiene miedo a decir, en cualquier servicio hay
+                errores, ¿te imaginas como es en el mundo digital? Si te estan vendiendo servicios sin errores es
+                mentira, los errores estan y para eso nos especializamos en ofrecer un servicio 100% transparente en el
+                que se trabaja a partir de analitica de datos, el problema no son los errores, sino que como se acciona
+                ante ellos.
             </p>
-            <a href="#" class="inline-flex items-center text-lg text-violet-400  hover:underline">
-                Contactanos
-                <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                    fill="none" viewBox="0 0 14 10">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M1 5h12m0 0L9 1m4 4L9 9" />
-                </svg>
-            </a>
 
         </div>
         <div data-aos="fade-down" data-aos-delay="200" class="w-52 px-2  md:mx-4 mx-auto">
