--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../src/css/output.css" />
     <link rel="stylesheet" href="../src/css/aos.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <meta name="description"
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
