--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     </section>
 
     <!-- Introducción -->
-    <section class="flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10">
-        <div class="grow w-screen self-center px-3 md:px-6">
+    <section class="py-10 flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-20 border-b-4 border-violet-400">
+        <div class="grow w-screen self-center px-3 md:px-6 order-2 md:order-1">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Frustración</h2>
             <p class="my-4 text-lg text-gray-500">Nos encontramos en un momento en el que hay un gran problema,
@@ -123,10 +123,10 @@
             </a>
 
         </div>
-        <div class="w-2/4 px-2 border-b-4 border-black md:mx-4">
+        <div class="w-3/4 md:w-1/2 px-2 border-b-4 border-black md:mx-4 mx-auto mb-10 order-1 md:order-2">
 
             <img class="animate-fade-up animate-infinite animate-duration-[5000ms] animate-delay-100 mx-auto h-auto w-full transition-all duration-300 rounded-lg cursor-pointer filter grayscale hover:grayscale-0"
-                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/angry-man-svgrepo-com(1).svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2FuZ3J5LW1hbi1zdmdyZXBvLWNvbSgxKS5zdmciLCJpYXQiOjE3MTE3Mzg1MzAsImV4cCI6MTc0MzI3NDUzMH0.gxYOR7xxmfiJ0vFLKtt87lAgXwvJasGDC7e0DRXLMzY&t=2024-03-29T18%3A55%3A30.905Z"
+                src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/loss-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvc3Mtc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzEyMjU3NzA1LCJleHAiOjE3NDM3OTM3MDV9.smYdq_wUXMd688t7Fv3O_KkTkEzSfLuk5A025FCGrM8&t=2024-04-04T19%3A08%3A23.283Z"
                 alt="image description">
 
         </div>
