--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -252,8 +252,8 @@
                     </a>
                 </div>
             </div>
-            <div data-aos="fade-left" data-aos-delay="500" data-aos-duration="1000" class="order-1 md:order-2">
-                <img class="w-64 md:w-96 px-10 md:px-0 mx-auto"
+            <div data-aos="fade-left" data-aos-delay="500" data-aos-duration="1000" class="order-1 md:order-2 flex justify-center">
+                <img class="w-64 md:w-96"
                     src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/businessmen-happy-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2J1c2luZXNzbWVuLWhhcHB5LXN2Z3JlcG8tY29tLnN2ZyIsImlhdCI6MTcxMjI1MDAyNywiZXhwIjoxNzQzNzg2MDI3fQ.HZFvgSxbAJ-0XblDoq2LjHPLb-Rf54hTZzP6WULjb5I&t=2024-04-04T17%3A00%3A25.997Z"
                     alt="svg crecimiento">
             </div>
