--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -208,7 +208,7 @@
                 alt="svg pointing right">
         </div>
 
-        <div data-aos="fade-left" data-aos-duration="1000" class="flex flex-col w-full md:w-1/2 text-center md:py-20">
+        <div data-aos="fade-down" data-aos-duration="1000" class="flex flex-col w-full md:w-1/2 text-center md:py-20">
             <div>
                 <h2
                     class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-5xl dark:text-white">
@@ -252,7 +252,7 @@
                     </a>
                 </div>
             </div>
-            <div data-aos="fade-left" data-aos-delay="500" data-aos-duration="1000" class="order-1 md:order-2 flex justify-center">
+            <div data-aos="fade-down" data-aos-delay="500" data-aos-duration="1000" class="order-1 md:order-2 flex justify-center">
                 <img class="w-64 md:w-96"
                     src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/businessmen-happy-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2J1c2luZXNzbWVuLWhhcHB5LXN2Z3JlcG8tY29tLnN2ZyIsImlhdCI6MTcxMjI1MDAyNywiZXhwIjoxNzQzNzg2MDI3fQ.HZFvgSxbAJ-0XblDoq2LjHPLb-Rf54hTZzP6WULjb5I&t=2024-04-04T17%3A00%3A25.997Z"
                     alt="svg crecimiento">
