--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/output.css" />
+    <link rel="stylesheet" href="./src/css/aos.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <meta name="description"
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
@@ -91,7 +93,7 @@
 
     <!-- Introducción -->
     <section class="py-10 flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-20 border-b-4 border-violet-400">
-        <div class="grow w-screen self-center px-3 md:px-6 order-2 md:order-1">
+        <div data-aos="fade-down" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 order-2 md:order-1">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Frustración</h2>
             <p class="my-4 text-lg text-gray-500">Nos encontramos en un momento en el que hay un gran problema,
@@ -225,7 +227,7 @@
     <!-- servicio -->
     <section class="flex flex-col px-2 gap-2 py-6 h-full">
         <div class="md:flex md:justify-around items-start py-9 md:mt-10">
-            <div class="flex flex-col justify-center items-center text-center md:w-1/2 md:border-r-2 md:border-violet-400 md:h-64 mb-10 md:mb-0">
+            <div  data-aos="fade-down-right" data-aos-delay="200" class="flex flex-col justify-center items-center text-center md:w-1/2 md:border-r-2 md:border-violet-400 md:h-64 mb-10 md:mb-0">
                 <img class="w-36"
                     src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/develop-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2RldmVsb3Atc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzEwOTYzMTU3LCJleHAiOjE3NDI0OTkxNTd9.SwuhS26JXTwpH9N612xzGL6Bvz9ixePHC-KKS1DlePI&t=2024-03-20T19%3A32%3A37.262Z"
                     alt="">
@@ -235,7 +237,7 @@
                 <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400 px-3">Presencia en línea: Sitios Web hechos para Convertir Visitantes en Clientes y para que logres diferenciarte de tu comepetencia.
                 </p>
             </div>
-            <div class="flex flex-col justify-center items-center text-center md:w-1/2 md:border-l-2 md:border-violet-400 md:h-64">
+            <div  data-aos="fade-down-right" data-aos-delay="200" class="flex flex-col justify-center items-center text-center md:w-1/2 md:border-l-2 md:border-violet-400 md:h-64">
                 <img class="w-36"
                     src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/funnel-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2Z1bm5lbC1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTA5NzA2NzUsImV4cCI6MTc0MjUwNjY3NX0.qlWCI7x9qThec9ib1LUTZO8bAjeNoGq2Iz6GOX_xWWo&t=2024-03-20T21%3A37%3A56.110Z"
                     alt="">
@@ -248,7 +250,7 @@
         </div>
         <div class="border-t-4 border-violet-400 my-10 hidden md:flex"></div>
         <div class="md:flex md:justify-start items-start py-9 md:mt-20 mb-10">
-            <div class="flex flex-col justify-between items-center text-center md:w-1/3 md:border-r-2 md:border-violet-400 md:h-96 mb-10 md:mb-0 px-3">
+            <div  data-aos="fade-down-right" data-aos-delay="200" class="flex flex-col justify-between items-center text-center md:w-1/3 md:border-r-2 md:border-violet-400 md:h-96 mb-10 md:mb-0 px-3">
                 <img class="w-36 md:w-20"
                     src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/ads-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2Fkcy1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTA5NzI1ODcsImV4cCI6MTc0MjUwODU4N30.5pledhs9HHJ9EWVUc7Ku-z1_5dVnp1DQOXDTPsFNuCU&t=2024-03-20T22%3A09%3A47.492Z"
                     alt="">
@@ -258,7 +260,7 @@
                 <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400 px-3">Diferenciate con: campañas de Anuncios que Atraen Clientes y Causan crecimiento. Utilizamos diferentes plataformas pero nos enfocamos en google ads, plataforma solida y la mas atractiva de todo el mercado.
                 </p>
             </div>
-            <div class="flex flex-col justify-between items-center text-center md:w-1/3 md:border-l-2 md:border-violet-400 md:h-96 px-3 mb-10">
+            <div  data-aos="fade-down-right" data-aos-delay="200" class="flex flex-col justify-between items-center text-center md:w-1/3 md:border-l-2 md:border-violet-400 md:h-96 px-3 mb-10">
                 <img class="w-36 md:w-20"
                     src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/plant-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BsYW50LXN2Z3JlcG8tY29tLnN2ZyIsImlhdCI6MTcxMDk3MzA2NywiZXhwIjoxNzQyNTA5MDY3fQ.8EecNQhBYHWNNV7bsXpDSksW0QAmLvV3vqF6A_Z527Y&t=2024-03-20T22%3A17%3A47.483Z"
                     alt="svg ads">
@@ -268,7 +270,7 @@
                 <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">te ayudamos desde nuestra experiencia, tenemos la mejor estrategia para poder alcanzar un gran objetivo, la nutrición del cliente, aunque no parezca es algo escencial si queres crecer, con nuestra ayuda obtendras un gran asesoramiento.
                 </p>
             </div>
-            <div class="flex flex-col justify-between items-center text-center md:w-1/3 md:border-l-4 md:border-violet-400 md:h-96 px-3 mb-10">
+            <div  data-aos="fade-down-right" data-aos-delay="200" class="flex flex-col justify-between items-center text-center md:w-1/3 md:border-l-4 md:border-violet-400 md:h-96 px-3 mb-10">
                 <img class="w-36 md:w-20"
                     src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/data-analysis-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2RhdGEtYW5hbHlzaXMtc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzEwOTcyODk3LCJleHAiOjE3NDI1MDg4OTd9.VaPB_lEF4PKZnqRH5y9vkg2tJL1LQxEVmHQ78vw4CAc&t=2024-03-20T22%3A14%3A58.195Z"
                     alt="">
@@ -308,24 +310,24 @@
     <!-- footer -->
 
 
-    <footer class="bg-violet-400 dark:bg-gray-900 mt-10">
+    <footer class="bg-violet-400 dark:bg-gray-900 mt-10 text-start">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
-                <div class="mb-6 md:mb-0 w-32 h-24">
+                <div class="w-64 h-24 flex justify-start">
                     <a href="https://flowbite.com/" class="flex items-center">
-                        <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28ucG5nIiwiaWF0IjoxNzEwODg3NDgxLCJleHAiOjE3NDI0MjM0ODF9.QUUF4SxJYmz1jTVpq_eVJ0xaNm67crEeZ7jMhogQkHs&t=2024-03-19T22%3A31%3A21.635Z"
+                        <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.svg(5).png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28uc3ZnKDUpLnBuZyIsImlhdCI6MTcxMjI1NzE3OSwiZXhwIjoxNzQzNzkzMTc5fQ.lBzGOfW3ZifFkU0xbtqIofF4GH_1eFrBxope3gl8uCM&t=2024-04-04T18%3A59%3A37.981Z"
                             class="w-full me-3" alt="Logo" />
                     </a>
                 </div>
-                <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+                <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-2">
                     <div>
-                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Resources</h2>
+                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Navegación</h2>
                         <ul class="text-gray-500 dark:text-gray-400 font-medium">
                             <li class="mb-4">
-                                <a href="https://flowbite.com/" class="hover:underline">Flowbite</a>
+                                <a href="./pages/servicio.html" class="hover:underline">Servicios</a>
                             </li>
                             <li>
-                                <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
+                                <a href="./pages/contacto.html" class="hover:underline">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -336,18 +338,7 @@
                                 <a href="https://github.com/themesberg/flowbite" class="hover:underline ">Instagram</a>
                             </li>
                             <li>
-                                <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Tik tok</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
-                        <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                            <li class="mb-4">
-                                <a href="#" class="hover:underline">Privacy Policy</a>
-                            </li>
-                            <li>
-                                <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                                <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Linkedin</a>
                             </li>
                         </ul>
                     </div>
@@ -355,53 +346,28 @@
             </div>
             <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
             <div class="sm:flex sm:items-center sm:justify-between">
-                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a
-                        href="https://flowbite.com/" class="hover:underline">Santi™</a>. Todos los derechos reservados.
+                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="../index.html"
+                        class="hover:underline">Fortis™</a>. Todos los derechos reservados.
                 </span>
                 <div class="flex mt-4 sm:justify-center sm:mt-0">
-                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
-                        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                            viewBox="0 0 8 19">
-                            <path fill-rule="evenodd"
-                                d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Facebook page</span>
+
+                    <a href="https://www.instagram.com/_.fortis/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+                        <img class="w-4 h-4"
+                            src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/instagram-svgrepo-com(1).svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2luc3RhZ3JhbS1zdmdyZXBvLWNvbSgxKS5zdmciLCJpYXQiOjE3MTIyNTYzNzcsImV4cCI6MTc0Mzc5MjM3N30.OmejLD0qulH31qf7aSa4-NpntBzjLKVnivs6Qk4Jokg&t=2024-04-04T18%3A46%3A15.879Z"
+                            alt="" srcset="">
+                        <span class="sr-only">instagram</span>
                     </a>
                     <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
-                        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                            viewBox="0 0 21 16">
-                            <path
-                                d="M16.942 1.556a16.3 16.3 0 0 0-4.126-1.3 12.04 12.04 0 0 0-.529 1.1 15.175 15.175 0 0 0-4.573 0 11.585 11.585 0 0 0-.535-1.1 16.274 16.274 0 0 0-4.129 1.3A17.392 17.392 0 0 0 .182 13.218a15.785 15.785 0 0 0 4.963 2.521c.41-.564.773-1.16 1.084-1.785a10.63 10.63 0 0 1-1.706-.83c.143-.106.283-.217.418-.33a11.664 11.664 0 0 0 10.118 0c.137.113.277.224.418.33-.544.328-1.116.606-1.71.832a12.52 12.52 0 0 0 1.084 1.785 16.46 16.46 0 0 0 5.064-2.595 17.286 17.286 0 0 0-2.973-11.59ZM6.678 10.813a1.941 1.941 0 0 1-1.8-2.045 1.93 1.93 0 0 1 1.8-2.047 1.919 1.919 0 0 1 1.8 2.047 1.93 1.93 0 0 1-1.8 2.045Zm6.644 0a1.94 1.94 0 0 1-1.8-2.045 1.93 1.93 0 0 1 1.8-2.047 1.918 1.918 0 0 1 1.8 2.047 1.93 1.93 0 0 1-1.8 2.045Z" />
-                        </svg>
-                        <span class="sr-only">Discord community</span>
+                        <img class="w-4 h-4"
+                            src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/tiktok-icon-white-1-logo-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3Rpa3Rvay1pY29uLXdoaXRlLTEtbG9nby1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTIyNTY1MDMsImV4cCI6MTc0Mzc5MjUwM30.pRgOy3UN12xQBIlCOh22_yNSf-iL8wEPM0rykrgd8x4&t=2024-04-04T18%3A48%3A22.205Z"
+                            alt="" srcset="">
+                        <span class="sr-only">Tik tok</span>
                     </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
-                        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                            viewBox="0 0 20 17">
-                            <path fill-rule="evenodd"
-                                d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Twitter page</span>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
-                        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                            viewBox="0 0 20 20">
-                            <path fill-rule="evenodd"
-                                d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">GitHub account</span>
-                    </a>
-                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
-                        <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                            viewBox="0 0 20 20">
-                            <path fill-rule="evenodd"
-                                d="M10 0a10 10 0 1 0 10 10A10.009 10.009 0 0 0 10 0Zm6.613 4.614a8.523 8.523 0 0 1 1.93 5.32 20.094 20.094 0 0 0-5.949-.274c-.059-.149-.122-.292-.184-.441a23.879 23.879 0 0 0-.566-1.239 11.41 11.41 0 0 0 4.769-3.366ZM8 1.707a8.821 8.821 0 0 1 2-.238 8.5 8.5 0 0 1 5.664 2.152 9.608 9.608 0 0 1-4.476 3.087A45.758 45.758 0 0 0 8 1.707ZM1.642 8.262a8.57 8.57 0 0 1 4.73-5.981A53.998 53.998 0 0 1 9.54 7.222a32.078 32.078 0 0 1-7.9 1.04h.002Zm2.01 7.46a8.51 8.51 0 0 1-2.2-5.707v-.262a31.64 31.64 0 0 0 8.777-1.219c.243.477.477.964.692 1.449-.114.032-.227.067-.336.1a13.569 13.569 0 0 0-6.942 5.636l.009.003ZM10 18.556a8.508 8.508 0 0 1-5.243-1.8 11.717 11.717 0 0 1 6.7-5.332.509.509 0 0 1 .055-.02 35.65 35.65 0 0 1 1.819 6.476 8.476 8.476 0 0 1-3.331.676Zm4.772-1.462A37.232 37.232 0 0 0 13.113 11a12.513 12.513 0 0 1 5.321.364 8.56 8.56 0 0 1-3.66 5.73h-.002Z"
-                                clip-rule="evenodd" />
-                        </svg>
-                        <span class="sr-only">Dribbble account</span>
+                    <a href="https://www.linkedin.com/in/santiago-sosa-6b7997301/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+                        <img class="w-4 h-4"
+                            src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/linkedin-161-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xpbmtlZGluLTE2MS1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTIyNTY1NDAsImV4cCI6MTc0Mzc5MjU0MH0.foh4nKekBvEMWOGQWygUJZoklOVzbbA4r6F0_WEbMUs&t=2024-04-04T18%3A48%3A58.437Z"
+                            alt="" srcset="">
+                        <span class="sr-only">Linkedin</span>
                     </a>
                 </div>
             </div>
@@ -410,9 +376,12 @@
 
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+    <script src="../node_modules/aos/dist/aos.js"></script>
+    <script src="../node_modules/aos/src/js/aos.js"></script>
     <script>
         AOS.init();
     </script>
+
 </body>
 
 </html>
