--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <ul
                     class="flex flex-col font-medium md:p-0 mb-3 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 dark:border-gray-700">
                     <li>
-                        <a href="#" class="block py-2 px-3 md:p-0 rounded md:bg-transparent"
+                        <a href="./index.html" class="block py-2 px-3 md:p-0 rounded md:bg-transparent"
                             aria-current="page">Inicio</a>
                     </li>
                     <li>
@@ -52,7 +52,7 @@
                             class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 d:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Servicios</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="./pages/contacto.html"
                             class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
                     </li>
                 </ul>
