--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -17,7 +17,7 @@
 
     <nav class="bg-violet-400">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-2">
-            <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse w-36 h-24">
+            <a href="../index.html" class="flex items-center space-x-3 rtl:space-x-reverse w-36 h-24">
                 <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28ucG5nIiwiaWF0IjoxNzEwODg3NDgxLCJleHAiOjE3NDI0MjM0ODF9.QUUF4SxJYmz1jTVpq_eVJ0xaNm67crEeZ7jMhogQkHs&t=2024-03-19T22%3A31%3A21.635Z"
                     class="w-full" alt="Logo" />
             </a>
@@ -52,7 +52,7 @@
                             class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 d:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Servicios</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="./contacto.html"
                             class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
                     </li>
                 </ul>
