--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -80,7 +80,7 @@
     </section>
 
 
-    <section class=" h-screen my-10 p-10 flex justify-center items-center">
+    <section class=" h-screen my-10 p-10 flex flex-col md:flex-row mb-10 md:mb-0 justify-center items-center">
         <div data-aos="fade-down-right" data-aos-delay="300"  data-aos-duration="3000" class="border-b-4 border-black">
             <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/meeting-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL21lZXRpbmctc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzEyMzUwNjk2LCJleHAiOjE3NDM4ODY2OTZ9.gLuzJvX1kHLAmqFMcX2nBaUjAYmKL9dQeGnA4tvyuu4&t=2024-04-05T20%3A58%3A16.303Z" alt="" srcset="">
         </div>
