--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -80,13 +80,13 @@
     </section>
 
 
-    <section class=" h-screen my-10 p-10 flex flex-col md:flex-row mb-10 md:mb-0 justify-center items-center">
-        <div data-aos="fade-down-right" data-aos-delay="300"  data-aos-duration="3000" class="border-b-4 border-black">
+    <section class="h-screen my-10 p-10 flex flex-col md:flex-row mb-10 md:mb-0 justify-center items-center">
+        <div data-aos="fade-down-right" data-aos-delay="300"  data-aos-duration="3000" class="border-b-4 border-black px-4">
             <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/meeting-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL21lZXRpbmctc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzEyMzUwNjk2LCJleHAiOjE3NDM4ODY2OTZ9.gLuzJvX1kHLAmqFMcX2nBaUjAYmKL9dQeGnA4tvyuu4&t=2024-04-05T20%3A58%3A16.303Z" alt="" srcset="">
         </div>
 <!-- Principio del widget integrado de Calendly -->
 <!-- Principio del widget integrado de Calendly -->
-<div data-aos="fade-down" data-aos-delay="100" data-aos-duration="1000" class="w-screen calendly-inline-widget" data-url="https://calendly.com/santisosa244/30min?background_color=650fa9&text_color=ffffff&primary_color=65d575" style="min-width:320px;height:700px;"></div>
+<div data-aos="fade-down" data-aos-delay="100" data-aos-duration="1000" class="rounded-full w-screen calendly-inline-widget" data-url="https://calendly.com/santisosa244/30min?background_color=650fa9&text_color=ffffff&primary_color=65d575" style="min-width:320px;height:700px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Final del widget integrado de Calendly -->
     </section>
