--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -221,8 +221,8 @@
             </div>
             <div data-aos="fade-up" data-aos-delay="500">
                 <img class="w-full md:px-0 mx-auto shadow-2xl rounded-2xl"
-                    src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/analisis.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2FuYWxpc2lzLnBuZyIsImlhdCI6MTcxMjI1MjI5MCwiZXhwIjoxNzQzNzg4MjkwfQ.6WBvWu0lXxNAGvdnln2sAsQYgA0XGBNGbgueDxRgmeM&t=2024-04-04T17%3A38%3A08.334Z"
-                    alt="svg crecimiento">
+                    src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/pexels-pixabay-265087.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BleGVscy1waXhhYmF5LTI2NTA4Ny5qcGciLCJpYXQiOjE3MTIzNTgwNTYsImV4cCI6MTc0Mzg5NDA1Nn0.OzD2wwxsyCq8qyneQdPXss92rjPX1BL-hg9xGAU_Z8E&t=2024-04-05T23%3A00%3A56.443Z"
+                    alt="img crecimiento">
             </div>
         </div>
     </section>
