--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="bg-violet-400">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-2">
             <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse w-36 h-24">
-                <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28ucG5nIiwiaWF0IjoxNzEwODg3NDgxLCJleHAiOjE3NDI0MjM0ODF9.QUUF4SxJYmz1jTVpq_eVJ0xaNm67crEeZ7jMhogQkHs&t=2024-03-19T22%3A31%3A21.635Z"
+                <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.svg(6).png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28uc3ZnKDYpLnBuZyIsImlhdCI6MTcxMjM1NzYwMCwiZXhwIjoxNzQzODkzNjAwfQ.vYGQvcPe6d-yFtN2qtmDc9To5MQ8qGPNYkGXk-i7RAU&t=2024-04-05T22%3A53%3A19.956Z"
                     class="w-full" alt="Logo" />
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -39,7 +39,7 @@
                     </svg>
                 </button>
             </div>
-            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 text-white font-extrabold"
+            <div class="items-center justify-center hidden w-full md:flex md:w-auto md:order-1 text-white font-extrabold"
                 id="navbar-cta">
                 <ul
                     class="flex flex-col font-medium md:p-0 mb-3 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 dark:border-gray-700">
@@ -65,7 +65,7 @@
 
 
     <section
-        class="bg-center bg-no-repeat bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/conference.jpg')] bg-gray-700 bg-blend-multiply">
+        class="bg-center bg-no-repeat bg-gray-700 bg-blend-multiply" style="background-image: url('https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/pexels-shoper-pl-17485353.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BleGVscy1zaG9wZXItcGwtMTc0ODUzNTMuanBnIiwiaWF0IjoxNzEyMzU4Mzk5LCJleHAiOjE3NDM4OTQzOTl9.g-9g3iyFTpzfETe_6tLdP3IiAbZzlCgqcfmMQg_LUDs&t=2024-04-05T23%3A06%3A39.227Z')">
         <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
             <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
                 Alcanza hoy tus metas: pasa al otro nivel</h1>
@@ -93,12 +93,11 @@
 
     <!-- Introducción -->
     <section class="py-10 flex flex-col md:flex-row md:gap-10 justify-between h-full mt-10 mb-20 border-b-4 border-violet-400">
-        <div data-aos="fade-down" data-aos-delay="400" class="grow w-screen self-center px-3 md:px-6 order-2 md:order-1">
+        <div data-aos="fade-down" data-aos-delay="400" data-aos-duration="1000" class="grow w-screen self-center px-3 md:px-6 order-2 md:order-1">
 
             <h2 class="text-4xl font-extrabold dark:text-white">Frustración</h2>
             <p class="my-4 text-lg text-gray-500">Nos encontramos en un momento en el que hay un gran problema,
-                <span
-                    class="font-semibold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">estancamiento</span>,
+                la mayoria de las empresas o negocios estan estancados o no alcanzan su máximo potencial<br>
                 ¿qué provoca esto? <br>
                 <span class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-violet-400 to-green-400">
                     Frustración
@@ -310,12 +309,12 @@
     <!-- footer -->
 
 
-    <footer class="bg-violet-400 dark:bg-gray-900 mt-10 text-start">
+    <footer class="bg-violet-400 dark:bg-gray-900 mt-10 text-start rounded-t-3xl shadow-2xl">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div class="w-64 h-24 flex justify-start">
                     <a href="https://flowbite.com/" class="flex items-center">
-                        <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.svg(5).png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28uc3ZnKDUpLnBuZyIsImlhdCI6MTcxMjI1NzE3OSwiZXhwIjoxNzQzNzkzMTc5fQ.lBzGOfW3ZifFkU0xbtqIofF4GH_1eFrBxope3gl8uCM&t=2024-04-04T18%3A59%3A37.981Z"
+                        <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.svg(6).png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28uc3ZnKDYpLnBuZyIsImlhdCI6MTcxMjM1NzYwMCwiZXhwIjoxNzQzODkzNjAwfQ.vYGQvcPe6d-yFtN2qtmDc9To5MQ8qGPNYkGXk-i7RAU&t=2024-04-05T22%3A53%3A19.956Z"
                             class="w-full me-3" alt="Logo" />
                     </a>
                 </div>
