--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@
     <!-- footer -->
 
 
-    <footer class="bg-violet-400 dark:bg-gray-900 mt-10 text-start rounded-t-3xl shadow-2xl">
+    <footer class="bg-violet-400 dark:bg-gray-900 mt-10 text-start rounded-t-3xl">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
-                <div class="w-64 h-24 flex justify-start">
-                    <a href="https://flowbite.com/" class="flex items-center">
+                <div class="flex items-center md:items-center space-x-3 rtl:space-x-reverse w-36 h-24 md:w-60 mx-auto">
+                    <a href="./index.html" class="flex items-start">
                         <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.svg(6).png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28uc3ZnKDYpLnBuZyIsImlhdCI6MTcxMjM1NzYwMCwiZXhwIjoxNzQzODkzNjAwfQ.vYGQvcPe6d-yFtN2qtmDc9To5MQ8qGPNYkGXk-i7RAU&t=2024-04-05T22%3A53%3A19.956Z"
-                            class="w-full me-3" alt="Logo" />
+                            class="w-full" alt="Logo" />
                     </a>
                 </div>
                 <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-2">
