--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
     <nav class="bg-violet-400">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-2">
             <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse w-36 h-24">
-                <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28ucG5nIiwiaWF0IjoxNzEwODg3NDgxLCJleHAiOjE3NDI0MjM0ODF9.QUUF4SxJYmz1jTVpq_eVJ0xaNm67crEeZ7jMhogQkHs&t=2024-03-19T22%3A31%3A21.635Z"
+                <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.svg(6).png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28uc3ZnKDYpLnBuZyIsImlhdCI6MTcxMjM1NzYwMCwiZXhwIjoxNzQzODkzNjAwfQ.vYGQvcPe6d-yFtN2qtmDc9To5MQ8qGPNYkGXk-i7RAU&t=2024-04-05T22%3A53%3A19.956Z"
                     class="w-full" alt="Logo" />
             </a>
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -39,26 +39,27 @@
                     </svg>
                 </button>
             </div>
-            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 text-white font-extrabold"
+            <div class="items-center justify-center hidden w-full md:flex md:w-auto md:order-1 text-white font-extrabold"
                 id="navbar-cta">
                 <ul
                     class="flex flex-col font-medium md:p-0 mb-3 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 dark:border-gray-700">
                     <li>
-                        <a href="../index.html" class="block py-2 px-3 md:p-0 rounded md:bg-transparent"
+                        <a href="./index.html" class="block py-2 px-3 md:p-0 rounded md:bg-transparent"
                             aria-current="page">Inicio</a>
                     </li>
                     <li>
-                        <a href="./servicio.html"
+                        <a href="./pages/servicio.html"
                             class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 d:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Servicios</a>
                     </li>
                     <li>
-                        <a href="#"
+                        <a href="./pages/contacto.html"
                             class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
 
 
     <!-- HERO -->
@@ -93,13 +94,13 @@
     <!-- footer -->
 
 
-    <footer class="bg-violet-400 dark:bg-gray-900 mt-10 text-start">
+    <footer class="bg-violet-400 dark:bg-gray-900 mt-10 text-start rounded-t-3xl">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
-                <div class="w-64 h-24 flex justify-start">
-                    <a href="https://flowbite.com/" class="flex items-center">
-                        <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.svg(5).png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28uc3ZnKDUpLnBuZyIsImlhdCI6MTcxMjI1NzE3OSwiZXhwIjoxNzQzNzkzMTc5fQ.lBzGOfW3ZifFkU0xbtqIofF4GH_1eFrBxope3gl8uCM&t=2024-04-04T18%3A59%3A37.981Z"
-                            class="w-full me-3" alt="Logo" />
+                <div class="flex items-center md:items-center space-x-3 rtl:space-x-reverse w-36 h-24 md:w-60 mx-auto">
+                    <a href="./index.html" class="flex items-start">
+                        <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/logo.svg(6).png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2xvZ28uc3ZnKDYpLnBuZyIsImlhdCI6MTcxMjM1NzYwMCwiZXhwIjoxNzQzODkzNjAwfQ.vYGQvcPe6d-yFtN2qtmDc9To5MQ8qGPNYkGXk-i7RAU&t=2024-04-05T22%3A53%3A19.956Z"
+                            class="w-full" alt="Logo" />
                     </a>
                 </div>
                 <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-2">
@@ -107,10 +108,10 @@
                         <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Navegación</h2>
                         <ul class="text-gray-500 dark:text-gray-400 font-medium">
                             <li class="mb-4">
-                                <a href="../index.html" class="hover:underline">Inicio</a>
+                                <a href="../pages/servicio.html" class="hover:underline">Servicios</a>
                             </li>
                             <li>
-                                <a href="../pages/contacto.html" class="hover:underline">Servicios</a>
+                                <a href="../pages/contacto.html" class="hover:underline">Contacto</a>
                             </li>
                         </ul>
                     </div>
