--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,7 +24,7 @@
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
                 <a href="https://w.app/tflRnm">
                     <button type="button"
-                        class="text-black font-bold hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-sm px-4 py-2 text-center bg-white">
+                        class="text-black font-bold hover:bg-green-400 focus:ring-4 focus:outline-none focus:ring-green-400 rounded-lg text-sm px-4 py-2 text-center bg-white">
                         Quiero comenzar
                     </button>
                 </a>
@@ -44,16 +44,16 @@
                 <ul
                     class="flex flex-col font-medium md:p-0 mb-3 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 dark:border-gray-700">
                     <li>
-                        <a href="./index.html" class="block py-2 px-3 md:p-0 rounded md:bg-transparent"
+                        <a href="../index.html" class="font-extrabold text-xl block px-3 py-2 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:hover:text-green-400"
                             aria-current="page">Inicio</a>
                     </li>
                     <li>
                         <a href="./pages/servicio.html"
-                            class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 d:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Servicios</a>
+                            class="font-extrabold text-xl block px-3 py-2 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:hover:text-green-400">Servicios</a>
                     </li>
                     <li>
                         <a href="./pages/contacto.html"
-                            class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
+                            class="font-extrabold text-xl block px-3 py-2 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:hover:text-green-400">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -65,10 +65,10 @@
     <!-- HERO -->
 
 
-    <section class="h-screen bg-center bg-no-repeat bg-gray-700 bg-blend-multiply flex flex-col justify-center"
+    <section class="h-fit md:h-screen bg-center bg-no-repeat bg-gray-700 bg-blend-multiply flex flex-col justify-start md:justify-center"
         style="background-image: url('https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/pexels-lukas-574071.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL3BleGVscy1sdWthcy01NzQwNzEuanBnIiwiaWF0IjoxNzExNjMxOTMyLCJleHAiOjE3NDMxNjc5MzJ9.kwj6HrQjXntT9PlYZMu3q_NFH5Jkd5u_IDf7XJTEN8Q&t=2024-03-28T13%3A18%3A52.190Z')">
         <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
-            <h1 class="mb-10 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
+            <h1 class="mb-10 text-5xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
                 Contacto</h1>
             <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-52">Haz clic en el enlace a continuación para programar una consulta directamente en nuestro calendario. Durante esta llamada, discutiremos tus objetivos, desafíos y cómo nuestros servicios pueden impulsar el crecimiento de tu negocio. ¡Esperamos con ansias conocerte y trabajar juntos para alcanzar tus metas digitales!
             </p>
@@ -82,19 +82,19 @@
 
 
     <section class="h-screen my-10 p-10 flex flex-col md:flex-row mb-10 md:mb-0 justify-center items-center">
-        <div data-aos="fade-down-right" data-aos-delay="300"  data-aos-duration="3000" class="border-b-4 border-black px-4">
+        <div data-aos="fade-down-right" data-aos-delay="300"  data-aos-duration="3000" class="border-b-4 border-black px-4 mb-10 md:mb-0">
             <img src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/meeting-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL21lZXRpbmctc3ZncmVwby1jb20uc3ZnIiwiaWF0IjoxNzEyMzUwNjk2LCJleHAiOjE3NDM4ODY2OTZ9.gLuzJvX1kHLAmqFMcX2nBaUjAYmKL9dQeGnA4tvyuu4&t=2024-04-05T20%3A58%3A16.303Z" alt="" srcset="">
         </div>
 <!-- Principio del widget integrado de Calendly -->
 <!-- Principio del widget integrado de Calendly -->
-<div data-aos="fade-down" data-aos-delay="100" data-aos-duration="1000" class="rounded-full w-screen calendly-inline-widget" data-url="https://calendly.com/santisosa244/30min?background_color=650fa9&text_color=ffffff&primary_color=65d575" style="min-width:320px;height:700px;"></div>
+<div data-aos="fade-down" data-aos-delay="100" data-aos-duration="1000" class="rounded-xl md:rounded-3xl px-4 w-screen calendly-inline-widget" data-url="https://calendly.com/santisosa244/30min?background_color=650fa9&text_color=ffffff&primary_color=65d575" style="min-width:320px;height:700px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Final del widget integrado de Calendly -->
     </section>
     <!-- footer -->
 
 
-    <footer class="bg-violet-400 dark:bg-gray-900 mt-10 text-start rounded-t-3xl">
+    <footer class="bg-violet-400 mt-10 text-start rounded-t-3xl shadow-md">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="md:flex md:justify-between">
                 <div class="flex items-center md:items-center space-x-3 rtl:space-x-reverse w-36 h-24 md:w-60 mx-auto">
@@ -103,10 +103,10 @@
                             class="w-full" alt="Logo" />
                     </a>
                 </div>
-                <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-2">
+                <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-2 text-white">
                     <div>
-                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Navegación</h2>
-                        <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                        <h2 class="mb-6 text-sm font-semibold uppercase dark:text-white">Navegación</h2>
+                        <ul class="font-medium">
                             <li class="mb-4">
                                 <a href="../pages/servicio.html" class="hover:underline">Servicios</a>
                             </li>
@@ -115,9 +115,9 @@
                             </li>
                         </ul>
                     </div>
-                    <div>
-                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Seguinos</h2>
-                        <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                    <div class="text-white">
+                        <h2 class="mb-6 text-sm font-semibold  uppercase dark:text-white">Seguinos</h2>
+                        <ul class="text-white dark:text-gray-400 font-medium">
                             <li class="mb-4">
                                 <a href="https://github.com/themesberg/flowbite" class="hover:underline ">Instagram</a>
                             </li>
@@ -130,10 +130,10 @@
             </div>
             <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
             <div class="sm:flex sm:items-center sm:justify-between">
-                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="../index.html"
+                <span class="text-sm text-white sm:text-center dark:text-gray-400">© 2024 <a href="../index.html"
                         class="hover:underline">Fortis™</a>. Todos los derechos reservados.
                 </span>
-                <div class="flex mt-4 sm:justify-center sm:mt-0">
+                <div class="flex mt-4 justify-start sm:mt-0">
 
                     <a href="https://www.instagram.com/_.fortis/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
                         <img class="w-4 h-4"
