--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -24,7 +24,7 @@
             <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
                 <a href="https://w.app/tflRnm">
                     <button type="button"
-                        class="text-black font-bold hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-sm px-4 py-2 text-center bg-white">
+                        class="text-black font-bold hover:bg-green-400 focus:ring-4 focus:outline-none focus:ring-green-400 rounded-lg text-sm px-4 py-2 text-center bg-white">
                         Quiero comenzar
                     </button>
                 </a>
@@ -44,23 +44,21 @@
                 <ul
                     class="flex flex-col font-medium md:p-0 mb-3 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 dark:border-gray-700">
                     <li>
-                        <a href="../index.html" class="block py-2 px-3 md:p-0 rounded md:bg-transparent"
+                        <a href="../index.html" class="font-extrabold text-xl block px-3 py-2 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:hover:text-green-400"
                             aria-current="page">Inicio</a>
                     </li>
                     <li>
-                        <a href="../pages/servicio.html"
-                            class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 d:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Servicios</a>
+                        <a href="./pages/servicio.html"
+                            class="font-extrabold text-xl block px-3 py-2 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:hover:text-green-400">Servicios</a>
                     </li>
                     <li>
-                        <a href="../pages/contacto.html"
-                            class="block py-2 px-3 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
+                        <a href="./pages/contacto.html"
+                            class="font-extrabold text-xl block px-3 py-2 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:hover:text-green-400">Contacto</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-
     <!-- HERO -->
 
 
