--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <meta name="description"
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5NL7J40PXJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-5NL7J40PXJ');
+    </script>
+
 </head>
 
 <body>
@@ -44,7 +54,8 @@
                 <ul
                     class="flex flex-col font-medium md:p-0 mb-3 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 dark:border-gray-700">
                     <li>
-                        <a href="./index.html" class="font-extrabold text-xl block px-3 py-2 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:hover:text-green-400"
+                        <a href="./index.html"
+                            class="font-extrabold text-xl block px-3 py-2 md:p-0 rounded hover:bg-gray-100 md:hover:bg-transparent hover:underline md:hover:text-green-400"
                             aria-current="page">Inicio</a>
                     </li>
                     <li>
@@ -220,17 +231,16 @@
 
     <!-- presentacion solución -->
     <section class="flex md:flex-row flex-col bg-green-400 py-20 px-12">
-        <div data-aos="fade-right"
-        data-aos-offset="300"
-        data-aos-duration="2000"
-        data-aos-easing="ease-in-sine" class="text-start md:text-start w-full md:w-1/2 order-1 md:order-2 self-center">
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-duration="2000" data-aos-easing="ease-in-sine"
+            class="text-start md:text-start w-full md:w-1/2 order-1 md:order-2 self-center">
             <h2
                 class="mb-10 text-4xl font-extrabold leading-10 tracking-tight text-gray-900 md:text-4xl lg:text-5xl dark:text-white">
                 Esta es la realidad para muchos, pero no tiene porque seguir siendo asi, con nuestro servcio te traemos
                 una <span class="text-violet-400 dark:text-blue-500">solución <br></span> que lograra conseguir lo que
                 buscas</h2>
         </div>
-        <div data-aos="fade-down" data-aos-delay="1500" data-aos-duration="1500" class="flex flex-col grow order-2 md:order mt-5">
+        <div data-aos="fade-down" data-aos-delay="1500" data-aos-duration="1500"
+            class="flex flex-col grow order-2 md:order mt-5">
             <img class="w-full h-96 md:ml-16"
                 src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/business-presentation-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2J1c2luZXNzLXByZXNlbnRhdGlvbi1zdmdyZXBvLWNvbS5zdmciLCJpYXQiOjE3MTA5NTU2NjgsImV4cCI6MTc0MjQ5MTY2OH0.vSRY2aw79A1aO3FnNiyqX0gBUa5c-tEcQ6bMu3F5CjA&t=2024-03-20T17%3A27%3A48.380Z"
                 alt="persona negocios svg">
@@ -319,8 +329,8 @@
     <section>
 
 
-        <section data-aos="fade-up"
-        data-aos-duration="3000" class="bg-white dark:bg-gray-900 flex flex-col md:flex md:flex-row md:px-4 justify-center">
+        <section data-aos="fade-up" data-aos-duration="3000"
+            class="bg-white dark:bg-gray-900 flex flex-col md:flex md:flex-row md:px-4 justify-center">
             <div
                 class="py-8 mx-auto max-w-screen-xl text-center lg:py-16 md:grow md:w-96 md:self-center md:order-1 order-2 px-4">
                 <h2
