--- a/pages/servicio.html
+++ b/pages/servicio.html
@@ -230,7 +230,7 @@
 
         <section class="bg-white dark:bg-gray-900 flex flex-col md:flex md:flex-row md:px-4 justify-center">
             <div data-aos="fade-down" data-aos-delay="100" data-aos-duration="1000"
-                class="py-8 mx-auto max-w-screen-xl text-center lg:py-16 md:grow md:w-96 md:self-center md:order-1 order-2 px-4">
+                class="py-8 mx-auto max-w-screen-xl text-center lg:py-16 md:grow md:w-screen md:self-center md:order-1 order-2 px-4">
                 <h2
                     class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-5xl dark:text-white">
                     ¿Queres tener el cambio que tanto deseas?</h2>
@@ -250,7 +250,7 @@
                     </a>
                 </div>
             </div>
-            <div data-aos="fade-down" data-aos-delay="500" data-aos-duration="1000" class="order-1 md:order-2 flex justify-center">
+            <div data-aos="fade-down" data-aos-delay="500" data-aos-duration="1000" class="order-1 md:order-2 flex justify-stretch">
                 <img class="w-64 md:w-96"
                     src="https://rowvmvkjxfwligmckqqr.supabase.co/storage/v1/object/sign/forts-images-videos/businessmen-happy-svgrepo-com.svg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJmb3J0cy1pbWFnZXMtdmlkZW9zL2J1c2luZXNzbWVuLWhhcHB5LXN2Z3JlcG8tY29tLnN2ZyIsImlhdCI6MTcxMjI1MDAyNywiZXhwIjoxNzQzNzg2MDI3fQ.HZFvgSxbAJ-0XblDoq2LjHPLb-Rf54hTZzP6WULjb5I&t=2024-04-04T17%3A00%3A25.997Z"
                     alt="svg crecimiento">
