--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <meta name="description"
         content="cortinas roller de máxima calidad para tu negocio. Se revendedor y accede a productos exclusivos, márgenes de ganancia altos y servicio al cliente especializado." />
     <title>FORTIS - Impulsa tu negocio con nuestros servicios</title>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5NL7J40PXJ"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
 
-        gtag('config', 'G-5NL7J40PXJ');
-    </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W84NS62NV0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W84NS62NV0');
+</script>
 
 </head>
 
